syntax = "proto3";
package chain4energy.c4echain.cfeminter;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cfeminter/params.proto";
import "cfeminter/minter.proto";

// this line is used by starport scaffolding # 1

option go_package = "github.com/chain4energy/c4e-chain/x/cfeminter/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/c4e/minter/v1beta1/params";
  }
  // Queries a list of Inflation items.
	rpc Inflation(QueryInflationRequest) returns (QueryInflationResponse) {
		option (google.api.http).get = "/c4e/minter/v1beta1/inflation";
	}
  // Queries a list of State items.
	rpc State(QueryStateRequest) returns (QueryStateResponse) {
		option (google.api.http).get = "/c4e/minter/v1beta1/state";
	}
// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryInflationRequest {
}

message QueryInflationResponse {
  string inflation = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

message QueryStateRequest {
}

message QueryStateResponse {
  MinterState minter_state = 1 [
    (gogoproto.nullable) = false
  ];
  repeated MinterState state_history = 2;
}

// this line is used by starport scaffolding # 3
